src/objects/CMS_Article__c.object
<CustomObject>
    <description>isll</description>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <description>Link to an external page or file.</description>
        <label>Link</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MediaType__c</fullName>
        <description>Media type to define that the content contains an image or video, for example.</description>
        <label>Media Type</label>
        <picklist>
            <picklistValues>
                <fullName>image</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>video</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Media_Content__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Media Content</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>CMS_Content__c.Type__c</field>
                <operation>equals</operation>
                <value>Image, Video</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMS_Content__c</referenceTo>
        <relationshipLabel>CMS Articles</relationshipLabel>
        <relationshipName>CMS_Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Media__c</fullName>
        <label>Media</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ThumbnailText__c</fullName>
        <description>Description text for a thumbnail.</description>
        <label>Thumbnail Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CMS Article</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CMS Article Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CMS Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>